--- a/index.html
+++ b/index.html
@@ -10,18 +10,11 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <h1 id="title">Survey Form</h1>
     <p id="description">Let us know how we can improve Microverse</p>
-    <!--
 
-    Hello Camper!
+    <form action="" id="survey-form">
+      <input type="text" id="name" name="name" required />
+    </form>
 
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
     <script src="js/index.js"></script>
   </body>
 </html>
