adding the features 5 and 6

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <p id="description">Let us know how we can improve Microverse</p>
 
     <form action="" id="survey-form">
-      <input type="text" id="name" name="name" required />
+      *Name: <input type="text" id="name" name="name" required /><br>
+      *Email: <input type="email" id="email" name="email" required /><br>
+      <input type="submit" value="Submit">
     </form>
 
     <script src="js/index.js"></script>
