--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <p id="description">Let us know how we can improve Microverse</p>
 
     <form action="" id="survey-form">
-      *Name: <input type="text" id="name" name="name" required /><br>
-      *Email: <input type="email" id="email" name="email" required /><br>
-      <input type="submit" value="Submit">
+      *Name: <input type="text" id="name" name="name" required /><br />
+      *Email: <input type="email" id="email" name="email" required /><br />
+      *Age: <input type="number" id="number" name="number" required /><br />
+      <input type="submit" value="Submit" />
     </form>
 
     <script src="js/index.js"></script>
