--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <p id="description">Let us know how we can improve Microverse</p>
 
     <form action="" id="survey-form">
-      *Name: <input type="text" id="name" name="name" required /><br />
-      *Email: <input type="email" id="email" name="email" required /><br />
-      *Age: <input type="number" id="number" name="number" required /><br />
+      <label id="name-label"> *Name: </label> <input type="text" id="name" name="name" required /><br />
+      <label id="email-label"> *Email: </label> <input type="email" id="email" name="email" required /><br />
+      <label id="number-label"> *Age: </label> <input type="number" id="number" min="1" max="125" name="number" required /><br />
       <input type="submit" value="Submit" />
     </form>
 
