--- a/index.html
+++ b/index.html
@@ -12,9 +12,46 @@
     <p id="description">Let us know how we can improve Microverse</p>
 
     <form action="" id="survey-form">
-      <label id="name-label"> *Name: </label> <input type="text" id="name" name="name" required /><br />
-      <label id="email-label"> *Email: </label> <input type="email" id="email" name="email" required /><br />
-      <label id="number-label"> *Age: </label> <input type="number" id="number" min="1" max="125" name="number" required /><br />
+      <label id="name-label"> *Name: </label>
+      <input
+        type="text"
+        id="name"
+        name="name"
+        required
+        placeholder="Enter your name"
+      /><br />
+
+      <label id="email-label"> *Email: </label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        required
+        placeholder="Enter your email"
+      /><br />
+
+      <label id="number-label"> *Age: </label>
+      <input
+        type="number"
+        id="number"
+        min="1"
+        max="125"
+        name="number"
+        required
+        placeholder="Age"
+      /><br />
+
+      <label>Which option best describes your current role?</label>
+      <select id="dropdown">
+        <option value="Select an option" disabled>Select an option</option>
+        <option value="Student">Student</option>
+        <option value="Full Time Job">Full Time Job</option>
+        <option value="Full Time Learner">Full Time Learner</option>
+        <option value="Prefer not to say">Prefer not to say</option>
+        <option value="other">other</option>
+      </select>
+      <br />
+
       <input type="submit" value="Submit" />
     </form>
 
