adding features 14 and 15

--- a/index.html
+++ b/index.html
@@ -51,7 +51,48 @@
         <option value="other">other</option>
       </select>
       <br />
+      
+      <label>* How likely is that you would recommend freeCodeCamp to a friend?</label>
+      <ul>
+        <li>
+          <label>
+            Definitely
+            <input
+             type="radio"
+             name="radio1"
+             value="1"
+            >
+          </label>
+        </li>
+        <li>
+            <label>
+              Maybe
+              <input
+               type="radio"
+               name="radio1"
+               value="2"
+              >
+            </label>
+          </li>
+          <li>
+              <label>
+                I am not sure
+                <input
+                 type="radio"
+                 name="radio1"
+                 value="3"
+                >
+              </label>
+            </li>
+      </ul>
+      <br>
 
+      <label>Any Comments or Suggestions?</label>
+      <textarea
+       name="textarea"
+       placeholder="Enter your comment here..."
+      ></textarea>
+      <br>
       <input type="submit" value="Submit" />
     </form>
 
