add checkbox menu

--- a/index.html
+++ b/index.html
@@ -51,49 +51,78 @@
         <option value="other">other</option>
       </select>
       <br />
-      
-      <label>* How likely is that you would recommend freeCodeCamp to a friend?</label>
+
+      <label
+        >* How likely is that you would recommend freeCodeCamp to a
+        friend?</label
+      >
       <ul>
         <li>
           <label>
             Definitely
-            <input
-             type="radio"
-             name="radio1"
-             value="1"
-            >
+            <input type="radio" name="radio1" value="1" />
           </label>
         </li>
         <li>
-            <label>
-              Maybe
-              <input
-               type="radio"
-               name="radio1"
-               value="2"
-              >
-            </label>
-          </li>
-          <li>
-              <label>
-                I am not sure
-                <input
-                 type="radio"
-                 name="radio1"
-                 value="3"
-                >
-              </label>
-            </li>
+          <label>
+            Maybe
+            <input type="radio" name="radio1" value="2" />
+          </label>
+        </li>
+        <li>
+          <label>
+            I am not sure
+            <input type="radio" name="radio1" value="3" />
+          </label>
+        </li>
       </ul>
-      <br>
+      <br />
 
+      <label
+        >Things that should be improved in the future(Check all that apply): </label
+      ><br />
+      <input type="checkbox" name="future" value="Front-end Projects" /><label
+        >Front-end Projects</label
+      ><br />
+      <input type="checkbox" name="future" value="Back-end Projects" /><label
+        >Back-end Projects</label
+      ><br />
+      <input type="checkbox" name="future" value="Data Visualization" /><label
+        >Data Visualization</label
+      ><br />
+      <input type="checkbox" name="future" value="Challenges" /><label
+        >Challenges</label
+      ><br />
+      <input
+        type="checkbox"
+        name="future"
+        value="Open Source Community"
+      /><label>Open Source Community</label><br />
+      <input type="checkbox" name="future" value="Gitter help rooms" /><label
+        >Gitter help rooms</label
+      ><br />
+      <input type="checkbox" name="future" value="Videos" /><label>Videos</label
+      ><br />
+      <input type="checkbox" name="future" value="City Meetups" /><label
+        >City Meetups</label
+      ><br />
+      <input type="checkbox" name="future" value="Wiki" /><label>Wiki</label
+      ><br />
+      <input type="checkbox" name="future" value="Forum" /><label>Forum</label
+      ><br />
+      <input type="checkbox" name="future" value="Additional Courses" /><label
+        >Additional Courses</label
+      >
+
+      <br />
       <label>Any Comments or Suggestions?</label>
       <textarea
-       name="textarea"
-       placeholder="Enter your comment here..."
+        name="textarea"
+        placeholder="Enter your comment here..."
       ></textarea>
-      <br>
-      <input type="submit" value="Submit" />
+      <br />
+
+      <input type="submit" value="Submit" id="submit" />
     </form>
 
     <script src="js/index.js"></script>
